--- a/net-topshelf-service-exposing-webapi/packages.config
+++ b/net-topshelf-service-exposing-webapi/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Serilog" version="1.5.14" targetFramework="net461" />
   <package id="Topshelf" version="4.0.3" targetFramework="net461" />
+  <package id="Topshelf.Serilog" version="4.0.3" targetFramework="net461" />
 </packages>
