--- a/net-topshelf-service-exposing-webapi/net-topshelf-service-exposing-webapi.csproj
+++ b/net-topshelf-service-exposing-webapi/net-topshelf-service-exposing-webapi.csproj
@@ -56,6 +56,12 @@
     <Reference Include="Serilog.FullNetFx, Version=1.5.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
       <HintPath>..\packages\Serilog.1.5.14\lib\net45\Serilog.FullNetFx.dll</HintPath>
     </Reference>
+    <Reference Include="ServiceHealthReporting.Core, Version=0.1.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ServiceHealthReporting.Core.0.1.1\lib\net46\ServiceHealthReporting.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="ServiceHealthReporting.Web, Version=0.1.7.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ServiceHealthReporting.Web.0.1.7\lib\net46\ServiceHealthReporting.Web.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
