--- a/net-topshelf-service-exposing-webapi/packages.config
+++ b/net-topshelf-service-exposing-webapi/packages.config
@@ -12,6 +12,8 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Serilog" version="1.5.14" targetFramework="net461" />
+  <package id="ServiceHealthReporting.Core" version="0.1.1" targetFramework="net461" />
+  <package id="ServiceHealthReporting.Web" version="0.1.7" targetFramework="net461" />
   <package id="Topshelf" version="4.0.3" targetFramework="net461" />
   <package id="Topshelf.Serilog" version="4.0.3" targetFramework="net461" />
 </packages>
